# libgpod

./: .gitignore  AUTHORS  INSTALL  Makefile.am  README  README.md  configure.ac  gnome-autogen.sh  meson.build  meson_options.txt
bindings/: meson.build
bindings/mono/: meson.build
bindings/mono/libgpod-sharp/: meson.build
bindings/python/: Makefile.am  __init__.py  gpod.i.in  gtkpod.py  ipod.py  meson.build
bindings/python/tests/: meson.build  tests.py
docs/reference/: Makefile.am  meson.build
m4/: python.m4
po/: LINGUAS  de.po  es.po  fr.po  he.po  it.po  ja.po  meson.build  ro.po  sv.po  zh_CN.po
src/: Makefile.am  db-artwork-parser.c  db-image-parser.c  db-itunes-parser.h  db-parse-context.h  itdb.h  itdb_artwork.c  itdb_device.h  itdb_endianness.h  itdb_hashAB.c  itdb_itunesdb.c  itdb_playlist.c  itdb_plist.h  itdb_private.h  itdb_sqlite.c  itdb_sqlite_queries.h  itdb_sysinfo_extended_parser.h  itdb_thumb.c  itdb_thumb.h  itdb_track.c  itdb_tzinfo_data.h  itdb_zlib.h  ithumb-writer.c  meson.build  pixmaps.h  rijndael.h
tests/: Makefile.am  meson.build  test-cp.cc  test-rebuild-db.cc
tools/: generic-callout.c  meson.build
