option('doc', type: 'feature', value: 'auto', description: 'Generate html documentation (requires gtk-doc).')
option('doc-format', type : 'combo', choices : ['html', 'pdf'], value : 'html', description: 'Set documentation format (requires doc=true).')
option('udev', type: 'feature', value: 'auto', description: 'Enable device detection with udev.')
option('ios', type: 'feature', value: 'auto', description: 'Eanble iPhone/iPod Touch support (requires libimobiledevice).')
option('python', type: 'feature', value: 'auto', description: 'Build Python bindings.')
option('mono', type: 'feature', value: 'auto', description: 'Build Mono bindings.')
option('artwork-db', type: 'feature', value: 'auto', description: 'Support ArtworkDB (requires gdk-pixbuf).')
option('sysinfo', type: 'feature', value: 'auto', description: 'Parse SysInfoExtended (gives extensive iPod description, requires libxml).')
option('sysinfo-ng', type: 'feature', value: 'auto', description: 'Parse SysInfoExtended of newer iPods (nano5g, requires libusb and sysinfo=true).')
