src_files = files(
    'db-artwork-debug.c',
    'db-artwork-parser.c',
    'db-artwork-writer.c',
    'db-image-parser.c',
    'db-parse-context.c',
    'itdb_artwork.c',
    'itdb_chapterdata.c',
    'itdb_device.c',
    'itdb_hash58.c',
    'itdb_hash72.c',
    'itdb_hashAB.c',
    'itdb_iphone.c',
    'itdb_itunesdb.c',
    'itdb_photoalbum.c',
    'itdb_playlist.c',
    'itdb_plist.c',
    'itdb_sqlite.c',
    'itdb_sysinfo_extended_parser.c',
    'itdb_thumb.c',
    'itdb_track.c',
    'itdb_tzinfo.c',
    'itdb_zlib.c',
    'ithumb-writer.c',
    'pixmaps.c',
    'rijndael.c',
)

header_files = files(
    'db-artwork-debug.h',
    'db-artwork-parser.h',
    'db-image-parser.h',
    'db-itunes-parser.h',
    'db-parse-context.h',
    'itdb_device.h',
    'itdb_endianness.h',
    'itdb.h',
    'itdb_plist.h',
    'itdb_private.h',
    'itdb_sqlite_queries.h',
    'itdb_sysinfo_extended_parser.h',
    'itdb_thumb.h',
    'itdb_tzinfo_data.h',
    'itdb_zlib.h',
    'pixmaps.h',
    'rijndael.h',
)

library(meson.project_name(),
    'db-artwork-debug.c',
    'db-artwork-parser.c',
    'db-artwork-writer.c',
    'db-image-parser.c',
    'db-parse-context.c',
    'itdb_artwork.c',
    'itdb_chapterdata.c',
    'itdb_device.c',
    'itdb_hash58.c',
    'itdb_hash72.c',
    'itdb_hashAB.c',
    'itdb_iphone.c',
    'itdb_itunesdb.c',
    'itdb_photoalbum.c',
    'itdb_playlist.c',
    'itdb_plist.c',
    'itdb_sqlite.c',
    'itdb_sysinfo_extended_parser.c',
    'itdb_thumb.c',
    'itdb_track.c',
    'itdb_tzinfo.c',
    'itdb_zlib.c',
    'ithumb-writer.c',
    'pixmaps.c',
    'rijndael.c',
    include_directories: configuration_inc,
    dependencies: [glib, gdk_pixbuf, libxml, m_dep, gobject, sqlite, plist, gmodule, zlib],
    version: '4.3.2',
    install: true
)

lib_src_dir = meson.current_source_dir()

install_headers('itdb.h', subdir: meson.project_name() + '-' + meson.project_version() / 'gpod')
